--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@
 				<artifactId>TlbCodeGenerator</artifactId>
 				<version>1.0.2</version>
 				<configuration>
-					<file>D:/BackUp/芯片开发/op-0.4.0/op_x86.dll</file>
+					<file>D:/BackUp/op/op-0.4.0/op_x86.dll</file>
 				</configuration>
 			</plugin>
 		</plugins>
